--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     }
   },
   "scripts": {
-    "build": "bunx tsup src/index.ts --format esm,cjs --dts"
+    "build": "bunx tsup src/index.ts --format esm,cjs --dts",
+    "prepublishOnly": "bun scripts/prepublish.js"
   },
   "files": [
     "dist",
